--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,11 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "fastapi (>=0.115.8,<0.116.0)",
-    "uvicorn[standard] (>=0.34.0,<0.35.0)"
+    "uvicorn[standard] (>=0.34.0,<0.35.0)",
+    "pydantic-settings (>=2.7.1,<3.0.0)",
+    "sqlalchemy (>=2.0.37,<3.0.0)",
+    "alembic (>=1.14.1,<2.0.0)",
+    "asyncpg (>=0.30.0,<0.31.0)"
 ]
 
 
