--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "pydantic-settings (>=2.7.1,<3.0.0)",
     "sqlalchemy (>=2.0.37,<3.0.0)",
     "alembic (>=1.14.1,<2.0.0)",
-    "asyncpg (>=0.30.0,<0.31.0)"
+    "asyncpg (>=0.30.0,<0.31.0)",
+    "black (>=25.1.0,<26.0.0)"
 ]
 
 
