--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "talent-city-fa"
 version = "0.1.0"
 description = ""
 authors = [
-    {name = "Naisa",email = "naisa@mail.ru"}
+    {name = "Naisa",email = "r-r-y@yandex.ru"}
 ]
 readme = "README.md"
 requires-python = ">=3.11"
@@ -14,7 +14,12 @@ dependencies = [
     "sqlalchemy (>=2.0.37,<3.0.0)",
     "alembic (>=1.14.1,<2.0.0)",
     "asyncpg (>=0.30.0,<0.31.0)",
-    "black (>=25.1.0,<26.0.0)"
+    "black (>=25.1.0,<26.0.0)",
+    "pyjwt (>=2.10.1,<3.0.0)",
+    "pydantic[email] (>=2.10.6,<3.0.0)",
+    "email-validator (>=2.2.0,<3.0.0)",
+    "passlib (>=1.7.4,<2.0.0)",
+    "bcrypt (==4.0.1)"
 ]
 
 
