add redis connector

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,8 @@ dependencies = [
     "pydantic[email] (>=2.10.6,<3.0.0)",
     "email-validator (>=2.2.0,<3.0.0)",
     "passlib (>=1.7.4,<2.0.0)",
-    "bcrypt (==4.0.1)"
+    "bcrypt (==4.0.1)",
+    "redis (>=6.0.0,<7.0.0)"
 ]
 
 
