--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Naisa",email = "r-r-y@yandex.ru"}
 ]
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.11,<4.0"
 dependencies = [
     "fastapi (>=0.115.8,<0.116.0)",
     "uvicorn[standard] (>=0.34.0,<0.35.0)",
@@ -20,7 +20,9 @@ dependencies = [
     "email-validator (>=2.2.0,<3.0.0)",
     "passlib (>=1.7.4,<2.0.0)",
     "bcrypt (==4.0.1)",
-    "redis (>=6.0.0,<7.0.0)"
+    "redis (>=6.0.0,<7.0.0)",
+    "fastapi-cache2 (>=0.2.2,<0.3.0)",
+    "celery (>=5.5.2,<6.0.0)"
 ]
 
 
