--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,9 @@ dependencies = [
     "bcrypt (==4.0.1)",
     "redis (>=6.0.0,<7.0.0)",
     "fastapi-cache2 (>=0.2.2,<0.3.0)",
-    "celery (>=5.5.2,<6.0.0)"
+    "celery (>=5.5.2,<6.0.0)",
+    "python-multipart (>=0.0.20,<0.0.21)",
+    "pillow (>=11.2.1,<12.0.0)"
 ]
 
 
